<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_learn"
        android:name="com.example.rise.ui.home.HomeFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_agenda"
        android:name="com.example.rise.ui.dashboard.DashboardFragment"
        android:label="@string/title_agenda"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rise.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.rise.ui.dashboard.DashboardFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.example.rise.ui.notifications.NotificationsFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_notifications" />
</navigation>