<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.support.SupportFragment">

    <!--Support Services-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/divider_support_1"
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_support_suicide"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_suicidehotline_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_suicidehotline_description"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_suicidehotline_phonenumber"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right|end"
                            android:orientation="horizontal"
                            tools:foregroundGravity="right">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_touch_app_24" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/divider_support_2"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_support_substance"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <!-- Title, secondary and supporting text -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_substance_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/support_substance_description"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_substance_phonenumber"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right|end"
                            android:orientation="horizontal"
                            tools:foregroundGravity="right">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_touch_app_24" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/divider_support_3"
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_support_emergency"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <!-- Title, secondary and supporting text -->

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_emergency_title"
                            android:textAppearance="?attr/textAppearanceHeadline6" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_emergency_description"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/support_emergency_phonenumber"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|right"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:gravity="right|end"
                            android:orientation="horizontal"
                            tools:foregroundGravity="right">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_touch_app_24" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:id="@+id/divider_support_4"
                android:layout_width="match_parent"
                android:layout_height="8dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>