<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollIndicators="right">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_home_greeting"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:checkable="true"
                android:clickable="false"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp"
                tools:ignore="DuplicateSpeakableTextCheck">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:id="@+id/text_home_greetingWelcomeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_greeting_greeting"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_greeting_quote"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_greeting_quoteAuthor"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="14sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_home_alertCovid19"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:checkable="true"
                android:clickable="false"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_alertCovid19_title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="6"
                            android:gravity="center_vertical"
                            android:text="@string/home_alertCovid19_description"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/home_alertCovid19_learnMore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/home_alertCovid19_button" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_activities_mental"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:checkable="true"
                android:clickable="false"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_agenda_title"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:id="@+id/text_home_agendaOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AP Enviornmental Science Test           9:00 am\nMeeting with Hannah and Paige          4:30 pm"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        android:textSize="14sp"
                        android:visibility="visible"
                        app:lineHeight="20dp"
                        tools:visibility="visible" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_home_settings"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:checkable="true"
                android:clickable="false"
                android:focusable="true"
                app:cardElevation="3dp"
                app:cardMaxElevation="3dp">

                <!-- Media -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Settings"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="6"
                            android:gravity="center_vertical"
                            android:text="Tap to open app settings"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/home_Settings_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="Open Settings" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>